# base-components

./: CMakeLists.txt
askap/components/: AskapComponentImager.os  ConstantSpectrum.os  SpectralIndex.os  SpectralModel.os  askap_components.h
tests/components/: AskapComponentImagerTest.h  CMakeLists.txt  SpectralIndexTest.h  tcomponents  tcomponents.cc
